# ember2024-fe-cpp

./: .gitignore  CMakeLists.txt  README.md  UP_AND_RUNNING.md
.github/workflows/: ci.yml
benchmarks/procbench/: README.md  results.html  results.json  tc01.json  tc02.json  tc03.json  tc04.json  tc05.json
cmdline_tools/: CMakeLists.txt
cmdline_tools/include/cmdline_tools/: argv.h
cmdline_tools/src/: argv.cpp
common/: CMakeLists.txt
common/include/efe/common/: logging.h  slidingbytewindow.h  timestamps.h
common/src/: shannonentropycalculator.cpp  slidingbytewindow.cpp  timestamps.cpp
core/include/efe/: core.h
core/include/efe/core/: all_feature_types.h  common.h  f_authenticode_signature.h  f_base.h  f_byte_entropy_histogram.h  f_data_directories.h  f_exports_info.h  f_general_file_info.h  f_header_file_info.h  f_imports_info.h  f_pe_format_warnings.h  f_rich_header.h  f_section_info.h  f_string_extractor.h
core/src/: all_feature_types.cpp  core.cpp  f_authenticode_signature.cpp  f_base.cpp  f_byte_entropy_histogram.cpp  f_data_directories.cpp  f_exports_info.cpp  f_general_file_info.cpp  f_header_file_info.cpp  f_imports_info.cpp  f_pe_format_warnings.cpp  f_rich_header.cpp  f_section_info.cpp  f_string_extractor.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
featurehasher/: CMakeLists.txt
featurehasher/include/efe/: featurehasher.h
featurehasher/include/efe/featurehasher/: hashing_fast.h
featurehasher/src/: featurehasher.cpp  fh.cpp
googletest/: CMakeLists.txt
pefile/: CMakeLists.txt
pefile/include/efe/: pefile.h
pefile/include/efe/pefile/: authenticode_signature.h
pefile/src/: authenticode_signature.cpp  pefile.cpp  section.cpp
shared/: CMakeLists.txt  README.md
shared/include/efe/: shared.h
shared/src/: shared.cpp
shared_demo/: CMakeLists.txt  README.md
shared_demo/src/: main.cpp
sqlite3/: CMakeLists.txt  README.txt
tests/: CMakeLists.txt
tests/include/pe_sample_reader/: pe_sample.h  pe_sample_reader.h
tests/include/testing/core/fixtures/: efe_test_data_fixture.h
tests/resources/efe_test_data/: index.sqlite3
tests/src/common/: bytecounter.test.cpp  slidingbytewindow.reference.py  slidingbytewindow.test.cpp
tests/src/core/: all_features.test.cpp
tests/src/core/fixtures/: efe_test_data_fixture.cpp
tests/src/featurehasher/: featurehasher.test.cpp
tests/src/pe_sample_reader/: pe_sample.cpp  pe_sample_reader.cpp
